# ai-mailbox

./: .env.example  .gitignore  BUG_REPORT.md  DELIVERABLES.csv  Dockerfile  PROJECT_STATUS.md  README.md  pyproject.toml
.claude/skills/tool-test/: SKILL.md
docs/handoff/ai-mailbox/: HANDOFF_AI-MAILBOX_2026-04-06_V3.md
docs/runbooks/: STAGING_TO_PRODUCTION.md  UAT_PROCESS.md
memory/: GLOBAL_DAILY_LOG.md
projects/AI_MAILBOX_PROJECT_PLAN/memory/: TODO.md  WAITING_ON.md
projects/AI_MAILBOX_PROJECT_PLAN/workflow/: PROCESS.md
src/ai_mailbox/: __init__.py  __main__.py  auth.py  config.py  errors.py  group_tokens.py  markdown.py  oauth.py  rate_limit.py  server.py  token_cleanup.py  web.py  web_oauth.py
src/ai_mailbox/db/: connection.py  (+2 more)
tests/: conftest.py  test_acknowledge.py  test_ai_to_ai_integration.py  test_ai_to_ai_messages.py  test_archive.py  test_auth.py  test_broadcast_integration.py  test_broadcast_queries.py  test_bug001_to_user_not_null.py  test_config_validation.py  test_dead_letters.py  test_errors.py  test_find_experts.py  test_group_tokens.py  test_group_tools.py  test_list_messages.py  test_list_participants.py  test_markdown.py  test_mcp_apps.py  test_migration.py  test_migration_010.py  test_migration_013.py  test_oauth.py  test_oauth_registration.py  test_profile_metadata.py  test_queries.py  test_rate_limit.py  test_reply_full.py  test_schema_parity.py  test_search.py  test_send_full.py  test_server.py  test_settings.py  test_system_messages.py  test_thread_full.py  test_token_cleanup.py  test_tools.py  test_web.py  test_whoami_full.py
(+86 files in other folders)
