[project]
name = "ai-mailbox"
version = "0.1.0"
description = "MCP server for inter-AI messaging between Claude Desktop instances"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "uvicorn>=0.34.0",
    "psycopg[binary]>=3.1.0",
    "bcrypt>=4.0",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]

[project.scripts]
ai-mailbox = "ai_mailbox.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_mailbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
